Fix layout race condition causing page info to be too tall for Mac PWA windows

This CL ensures the PageInfoBubbleView sets itself to its preferred size
before its childrens' sizes are updated, layed out and have the new
size pushed to the widget.

This is required for Mac PWA windows because the process of creating
the bubble widget will asynchronously update the NSWindow size and
asynchronously push the new size back onto the root view. This means
we cannot rely on this new size being set immediately after creating
the widget.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=375442&signed_aid=jQwc52ejdR5XkD7h5Yohew==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=375443&signed_aid=9kfGT_9rTwXnaYlX7-f8_g==&inline=1

Bug: 913397
Change-Id: Ic1abfd21fe4fe718cbcf5b07ea88dc8e969a9d78
Reviewed-on: https://chromium-review.googlesource.com/c/1415612
Reviewed-by: Patti <patricialor@chromium.org>
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623609}
Former-commit-id: 8194c0d23ec069cd3d3c8bd92997249e2af5740e